--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,14 +3,14 @@ on: push
 jobs:
   test:
     runs-on: ubuntu-latest
-    step:
-    - name: get code
-      uses: actions/checkout@v3
-    - name: Install Nodejs
-      uses: actions/setup-node@v3
-      with:
-        node-verison: 18
-    - name: Install dep
-      run : npm ci
-    - name : run test
-      run: npm test
+    steps:
+      - name: get code
+        uses: actions/checkout@v3
+      - name: Install Nodejs
+        uses: actions/setup-node@v3
+        with:
+          node-verison: 18
+      - name: Install dep
+        run : npm ci
+      - name : run test
+        run: npm test
